Available nodes, with rviz respresentation

--- a/exploration/CMakeLists.txt
+++ b/exploration/CMakeLists.txt
@@ -9,7 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   message_generation
-  geometry_msgs
+  visualization_msgs
+  nav_msgs
 )
 
 ## System dependencies are found with CMake's conventions
