--- a/exploration/CMakeLists.txt
+++ b/exploration/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   visualization_msgs
   nav_msgs
+  geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -132,13 +133,6 @@ include_directories(
 
 ## Declare a C++ executable
 # add_executable(exploration_node src/exploration_node.cpp)
-
-add_executable(node_generator  src/node_generator.cpp)
-target_link_libraries(node_generator  ${catkin_LIBRARIES})
-
-add_executable(node_generator_test  src/node_generator_test.cpp)
-target_link_libraries(node_generator_test  ${catkin_LIBRARIES})
-
 
 add_executable(exploration  src/exploration.cpp)
 target_link_libraries(exploration  ${catkin_LIBRARIES})
